# waffles

./: .cruft.json  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  container.yml
docker/: entrypoint
tests/: method_utils.py  test_jmap.py  test_module.py  test_waffles.py
waffles/: __init__.py  jmap.py  main.py  waffles.py
wafflesbot/: jmap.py  main.py  reply.py  waffles.py
