[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wafflesbot"
version = "0.0.0"
description = "Tech recruiter auto reply bot using JMAP"
license = "GPL-3.0-or-later"
authors = ["Stephen Kent <smkent@smkent.net>"]
readme = "README.md"
repository = "https://github.com/smkent/waffles"
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Email :: Post-Office",
    "Topic :: Office/Business :: Groupware",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
replyowl = "^0.1.1"
jmapc = "^0.2.0"

[tool.poetry.dev-dependencies]
black = "*"
cruft = "*"
flake8 = "*"
isort = "*"
mypy = "*"
poethepoet = "*"
pytest = "*"
pytest-cov = "*"
pytest-github-actions-annotate-failures = "*"
pytest-sugar = "*"
tox = "*"
freezegun = "^1.1.0"
types-freezegun = "^1.1.6"

[tool.poetry.scripts]
wafflesbot = "wafflesbot.main:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poe.tasks]
lt = ["lint", "test"]

lint = ["isort_lint", "black_lint"]
black_lint = { cmd = "black -l 79 -- tests/ wafflesbot/" }
isort_lint = { cmd = "isort -- tests/ wafflesbot/" }

test = ["flake8", "isort", "black", "mypy", "pytest"]
black = { cmd = "black -l 79 --check --diff --color -- tests/ wafflesbot/" }
isort = { cmd = "isort --check-only -- tests/ wafflesbot/" }
flake8 = { cmd = "flake8" }
mypy = { cmd = "mypy" }
pytest = { cmd = "pytest" }

[tool.coverage.run]
source = ["wafflesbot"]

[tool.coverage.report]
fail_under = 0
show_missing = true

[tool.cruft]
skip = [".git"]

[tool.isort]
atomic = true
profile = "black"
line_length = 79

[tool.mypy]
files = [ "tests", "wafflesbot" ]
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = """\
    --cov \
    --cov-append \
    --cov-report term \
    --cov-report xml:coverage.xml \
    --junitxml=tests/pytest.xml \
"""

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310
isolated_build = True
requires =
    tox-poetry-installer[poetry] == 0.6.0

[testenv]
deps =
    poetry
commands =
    poetry install
    poetry run poe test

[gh-actions]
python =
    3.10: py310
"""

# vim: ft=cfg
